stop horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ html, body, #root{
 }
 
 body {
+  overflow:hidden;
+  width:100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
